# NTaskManager

./: CMakeLists.txt  main.cpp
includes/: DashboardManager.h++  LegacyTask.h++  ProcessInfo.h++  Task.h++  Utils.h++
includes/ui/: Cells.h++  ProcessTableUI.h++
src/: DashboardManager.cpp  LegacyTask.cpp  ProcessInfo.cpp  Task.cpp
src/ui/: ProcessTableUI.cpp
